DL1 - Rerun KNN with PCA :v

--- a/Báo Cáo Cuối Kỳ/Dữ liệu 1/DL1 - K-Nearest Neighbors.ipynb
+++ b/Báo Cáo Cuối Kỳ/Dữ liệu 1/DL1 - K-Nearest Neighbors.ipynb
@@ -21,8 +21,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T01:32:28.170406100Z",
-     "start_time": "2023-08-15T01:32:26.911192800Z"
+     "end_time": "2023-08-15T03:59:09.987828500Z",
+     "start_time": "2023-08-15T03:59:09.892902600Z"
     }
    },
    "id": "bc363b24f749e984"
@@ -58,8 +58,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T01:32:28.276676Z",
-     "start_time": "2023-08-15T01:32:28.170406100Z"
+     "end_time": "2023-08-15T03:59:10.279961900Z",
+     "start_time": "2023-08-15T03:59:09.902057100Z"
     }
    },
    "id": "e1f66a53aec549b"
@@ -86,8 +86,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T01:32:30.226263700Z",
-     "start_time": "2023-08-15T01:32:28.277674900Z"
+     "end_time": "2023-08-15T03:59:11.038940700Z",
+     "start_time": "2023-08-15T03:59:10.105672Z"
     }
    },
    "id": "f2108f77f66cb892"
@@ -112,8 +112,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T01:32:30.241289700Z",
-     "start_time": "2023-08-15T01:32:30.227804200Z"
+     "end_time": "2023-08-15T03:59:11.054969500Z",
+     "start_time": "2023-08-15T03:59:11.038940700Z"
     }
    },
    "id": "d8e8c68b2c71d82"
@@ -128,8 +128,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T01:32:30.286145Z",
-     "start_time": "2023-08-15T01:32:30.244312100Z"
+     "end_time": "2023-08-15T03:59:11.121676Z",
+     "start_time": "2023-08-15T03:59:11.057043900Z"
     }
    },
    "id": "2a411e7b776debfb"
@@ -155,15 +155,108 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T01:32:30.350587300Z",
-     "start_time": "2023-08-15T01:32:30.289478900Z"
+     "end_time": "2023-08-15T03:59:11.204737800Z",
+     "start_time": "2023-08-15T03:59:11.114145100Z"
     }
    },
    "id": "2363b3a4ad8e555a"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### PCA"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6b1a0623c8b94f27"
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T03:59:11.205755900Z",
+     "start_time": "2023-08-15T03:59:11.195999300Z"
+    }
+   },
+   "id": "3c0e429877347bdd"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T03:59:11.297070900Z",
+     "start_time": "2023-08-15T03:59:11.208244600Z"
+    }
+   },
+   "id": "be625eddca899cde"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "PCA(n_components=2)",
+      "text/html": "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>PCA(n_components=2)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">PCA</label><div class=\"sk-toggleable__content\"><pre>PCA(n_components=2)</pre></div></div></div></div></div>"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca.fit(df)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T03:59:11.537280Z",
+     "start_time": "2023-08-15T03:59:11.225324400Z"
+    }
+   },
+   "id": "8415d1500c19a2a3"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0.9663956 , 0.00241736])"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca.explained_variance_ratio_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T03:59:11.576887400Z",
+     "start_time": "2023-08-15T03:59:11.505060500Z"
+    }
+   },
+   "id": "c6291f5a8c50730"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "X = df.drop(['Y'], axis=1)"
@@ -171,15 +264,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T01:32:30.371446700Z",
-     "start_time": "2023-08-15T01:32:30.353832700Z"
+     "end_time": "2023-08-15T03:59:11.577903800Z",
+     "start_time": "2023-08-15T03:59:11.525669900Z"
     }
    },
    "id": "3bce628c41efc71d"
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "y = df['Y'] "
@@ -187,15 +280,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T01:32:30.416091700Z",
-     "start_time": "2023-08-15T01:32:30.368643500Z"
+     "end_time": "2023-08-15T03:59:11.580926900Z",
+     "start_time": "2023-08-15T03:59:11.536272600Z"
     }
    },
    "id": "7722d781fb29661c"
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123)"
@@ -203,15 +296,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T01:32:30.497857900Z",
-     "start_time": "2023-08-15T01:32:30.384898500Z"
+     "end_time": "2023-08-15T03:59:11.647551200Z",
+     "start_time": "2023-08-15T03:59:11.556417100Z"
     }
    },
    "id": "bdce50305963c4c9"
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "# Function to test each column\n",
@@ -224,15 +317,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T01:32:30.527682100Z",
-     "start_time": "2023-08-15T01:32:30.408410500Z"
+     "end_time": "2023-08-15T03:59:11.648556600Z",
+     "start_time": "2023-08-15T03:59:11.583967400Z"
     }
    },
    "id": "88d4a9f07aa28152"
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "def test_columns(cols):\n",
@@ -244,15 +337,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T01:32:30.527682100Z",
-     "start_time": "2023-08-15T01:32:30.424631800Z"
+     "end_time": "2023-08-15T03:59:11.648556600Z",
+     "start_time": "2023-08-15T03:59:11.600129100Z"
     }
    },
    "id": "d89da2ef19215f7c"
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "def test_all():\n",
@@ -264,15 +357,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T01:32:30.527682100Z",
-     "start_time": "2023-08-15T01:32:30.440011400Z"
+     "end_time": "2023-08-15T03:59:11.648556600Z",
+     "start_time": "2023-08-15T03:59:11.613818400Z"
     }
    },
    "id": "71cfd8196aa2f953"
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -392,21 +485,21 @@
    ],
    "source": [
     "# Test each column\n",
-    "for column in X_train.columns:\n",
-    "    print(column, test_column(column))"
+    "# for column in X_train.columns:\n",
+    "#     print(column, test_column(column))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T01:32:52.835655700Z",
-     "start_time": "2023-08-15T01:32:30.459010400Z"
+     "end_time": "2023-08-15T03:59:37.360111800Z",
+     "start_time": "2023-08-15T03:59:11.628867900Z"
     }
    },
    "id": "fab92bf18a464abd"
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "# Test columns in pairs\n",
@@ -418,21 +511,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T01:32:52.869771700Z",
-     "start_time": "2023-08-15T01:32:52.838088Z"
+     "end_time": "2023-08-15T03:59:37.386056100Z",
+     "start_time": "2023-08-15T03:59:37.363633800Z"
     }
    },
    "id": "a1b2ffe435ecdb2b"
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "outputs": [
     {
      "data": {
       "text/plain": "0.6626655629139073"
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,8 +537,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T01:32:53.541893800Z",
-     "start_time": "2023-08-15T01:32:52.852319Z"
+     "end_time": "2023-08-15T03:59:38.105242600Z",
+     "start_time": "2023-08-15T03:59:37.379675700Z"
     }
    },
    "id": "27a3ed8187cf59cd"
