--- a/Báo Cáo Cuối Kỳ/Dữ liệu 3/DL3 - K-Nearest Neighbors.ipynb
+++ b/Báo Cáo Cuối Kỳ/Dữ liệu 3/DL3 - K-Nearest Neighbors.ipynb
@@ -1,14 +1,359 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
+   "cell_type": "markdown",
+   "source": [
+    "# Import libraries"
+   ],
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
+   "id": "cab0f1783fb73f08"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:55.955841400Z",
+     "start_time": "2023-08-15T04:29:55.737276100Z"
+    }
+   },
+   "id": "434417f0c9a032de"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Load data"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "972ca97dd749af63"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    User ID  Gender  Age  EstimatedSalary  Purchased\n0  15624510    Male   19            19000          0\n1  15810944    Male   35            20000          0\n2  15668575  Female   26            43000          0\n3  15603246  Female   27            57000          0\n4  15804002    Male   19            76000          0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>User ID</th>\n      <th>Gender</th>\n      <th>Age</th>\n      <th>EstimatedSalary</th>\n      <th>Purchased</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>15624510</td>\n      <td>Male</td>\n      <td>19</td>\n      <td>19000</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>15810944</td>\n      <td>Male</td>\n      <td>35</td>\n      <td>20000</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>15668575</td>\n      <td>Female</td>\n      <td>26</td>\n      <td>43000</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>15603246</td>\n      <td>Female</td>\n      <td>27</td>\n      <td>57000</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>15804002</td>\n      <td>Male</td>\n      <td>19</td>\n      <td>76000</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('suv_data.csv')\n",
+    "df.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:56.179857700Z",
+     "start_time": "2023-08-15T04:29:55.757554Z"
+    }
+   },
+   "id": "1e2385e1493af130"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Build a K-Nearest Neighbors model"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "742759c075659b38"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:56.181865900Z",
+     "start_time": "2023-08-15T04:29:55.791951800Z"
+    }
+   },
+   "id": "48b7e2043e828235"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Preprocessing"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "92b98855c7d1581d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "df = df.drop(['User ID'], axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:56.181865900Z",
+     "start_time": "2023-08-15T04:29:55.805372800Z"
+    }
+   },
+   "id": "213f80d8e4c3fd3f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "target = 'Purchased'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:56.182865Z",
+     "start_time": "2023-08-15T04:29:55.820684400Z"
+    }
+   },
+   "id": "312090200847fa57"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [],
+   "source": [
+    "df = df.dropna()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:56.198946700Z",
+     "start_time": "2023-08-15T04:29:55.839495700Z"
+    }
+   },
+   "id": "c47278a14a7a19aa"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [],
+   "source": [
+    "df = pd.get_dummies(df, drop_first=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:56.199971600Z",
+     "start_time": "2023-08-15T04:29:55.855668200Z"
+    }
+   },
+   "id": "e75ba9527d43b7d6"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [],
+   "source": [
+    "X = df.drop([target], axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:56.200968300Z",
+     "start_time": "2023-08-15T04:29:55.868017800Z"
+    }
+   },
+   "id": "8d917b3a0d779ab9"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [],
+   "source": [
+    "y = df[target] "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:56.200968300Z",
+     "start_time": "2023-08-15T04:29:55.883026500Z"
+    }
+   },
+   "id": "91c4760f2941a22"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:56.200968300Z",
+     "start_time": "2023-08-15T04:29:55.900446300Z"
+    }
+   },
+   "id": "9cf44d7730e94265"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [],
+   "source": [
+    "# Function to test each column\n",
+    "def test_column(col):\n",
+    "    model = KNeighborsClassifier(n_neighbors = 10, p = 2)\n",
+    "    model.fit(X_train[col].to_frame(), y_train)\n",
+    "    y_pred = model.predict(X_test[col].to_frame())\n",
+    "    return accuracy_score(y_test, y_pred)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:56.200968300Z",
+     "start_time": "2023-08-15T04:29:55.918685600Z"
+    }
+   },
+   "id": "2e0e7b980d361c3c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [],
+   "source": [
+    "def test_columns(cols):\n",
+    "    model = KNeighborsClassifier(n_neighbors = 10, p = 2)\n",
+    "    model.fit(X_train[cols], y_train)\n",
+    "    y_pred = model.predict(X_test[cols])\n",
+    "    return accuracy_score(y_test, y_pred)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:56.201969Z",
+     "start_time": "2023-08-15T04:29:55.931617800Z"
+    }
+   },
+   "id": "79b9666f2d8eb2cc"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [],
+   "source": [
+    "def test_all():\n",
+    "    model = KNeighborsClassifier(n_neighbors = 10, p = 2)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    return accuracy_score(y_test, y_pred)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:56.201969Z",
+     "start_time": "2023-08-15T04:29:55.941353600Z"
+    }
+   },
+   "id": "4fc7423b80432c33"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [],
+   "source": [
+    "# Test each column\n",
+    "# for column in X_train.columns:\n",
+    "#     print(column, test_column(column))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:56.204477800Z",
+     "start_time": "2023-08-15T04:29:55.959899900Z"
+    }
+   },
+   "id": "43001d007c56916"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [],
+   "source": [
+    "# Test columns in pairs\n",
+    "# for col1 in X_train.columns:\n",
+    "#     for col2 in X_train.columns:\n",
+    "#         if col1 < col2:\n",
+    "#             print(col1, col2, test_columns([col1, col2]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:56.295213100Z",
+     "start_time": "2023-08-15T04:29:55.975188300Z"
+    }
+   },
+   "id": "be1429f2931c4eb2"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.75"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Accuracy of all columns\n",
+    "test_all()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T04:29:56.324106500Z",
+     "start_time": "2023-08-15T04:29:55.990974800Z"
+    }
+   },
+   "id": "3d76ec6ee74fea49"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "92a95b33e5cca95a"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f89a51a7940338a2"
   }
  ],
  "metadata": {
