--- a/Báo Cáo Cuối Kỳ/Dữ liệu 1/DL1 - Softmax Regression.ipynb
+++ b/Báo Cáo Cuối Kỳ/Dữ liệu 1/DL1 - Softmax Regression.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -21,8 +21,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T02:25:27.001156300Z",
-     "start_time": "2023-08-15T02:25:26.908358Z"
+     "end_time": "2023-08-15T09:40:50.878002Z",
+     "start_time": "2023-08-15T09:40:50.503138100Z"
     }
    },
    "id": "18bb9ed55e88199d"
@@ -39,27 +39,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "outputs": [
     {
      "data": {
-      "text/plain": "   laufkont  laufzeit  moral  verw  hoehe  sparkont  beszeit  rate  famges  \\\n0         1        18      4     2   1049         1        2     4       2   \n1         1         9      4     0   2799         1        3     2       3   \n2         2        12      2     9    841         2        4     2       2   \n3         1        12      4     0   2122         1        3     3       3   \n4         1        12      4     0   2171         1        3     4       3   \n\n   buerge  ...  verm  alter  weitkred  wohn  bishkred  beruf  pers  telef  \\\n0       1  ...     2     21         3     1         1      3     2      1   \n1       1  ...     1     36         3     1         2      3     1      1   \n2       1  ...     1     23         3     1         1      2     2      1   \n3       1  ...     1     39         3     1         2      2     1      1   \n4       1  ...     2     38         1     2         2      2     2      1   \n\n   gastarb  kredit  \n0        2       1  \n1        2       1  \n2        2       1  \n3        1       1  \n4        1       1  \n\n[5 rows x 21 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>laufkont</th>\n      <th>laufzeit</th>\n      <th>moral</th>\n      <th>verw</th>\n      <th>hoehe</th>\n      <th>sparkont</th>\n      <th>beszeit</th>\n      <th>rate</th>\n      <th>famges</th>\n      <th>buerge</th>\n      <th>...</th>\n      <th>verm</th>\n      <th>alter</th>\n      <th>weitkred</th>\n      <th>wohn</th>\n      <th>bishkred</th>\n      <th>beruf</th>\n      <th>pers</th>\n      <th>telef</th>\n      <th>gastarb</th>\n      <th>kredit</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>18</td>\n      <td>4</td>\n      <td>2</td>\n      <td>1049</td>\n      <td>1</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>1</td>\n      <td>...</td>\n      <td>2</td>\n      <td>21</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>9</td>\n      <td>4</td>\n      <td>0</td>\n      <td>2799</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2</td>\n      <td>3</td>\n      <td>1</td>\n      <td>...</td>\n      <td>1</td>\n      <td>36</td>\n      <td>3</td>\n      <td>1</td>\n      <td>2</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>12</td>\n      <td>2</td>\n      <td>9</td>\n      <td>841</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>...</td>\n      <td>1</td>\n      <td>23</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>12</td>\n      <td>4</td>\n      <td>0</td>\n      <td>2122</td>\n      <td>1</td>\n      <td>3</td>\n      <td>3</td>\n      <td>3</td>\n      <td>1</td>\n      <td>...</td>\n      <td>1</td>\n      <td>39</td>\n      <td>3</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>12</td>\n      <td>4</td>\n      <td>0</td>\n      <td>2171</td>\n      <td>1</td>\n      <td>3</td>\n      <td>4</td>\n      <td>3</td>\n      <td>1</td>\n      <td>...</td>\n      <td>2</td>\n      <td>38</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 21 columns</p>\n</div>"
+      "text/plain": "       destination  passanger weather  temperature  time  \\\n0  No Urgent Place      Alone   Sunny           55   2PM   \n1  No Urgent Place  Friend(s)   Sunny           80  10AM   \n2  No Urgent Place  Friend(s)   Sunny           80  10AM   \n3  No Urgent Place  Friend(s)   Sunny           80   2PM   \n4  No Urgent Place  Friend(s)   Sunny           80   2PM   \n\n                  coupon expiration  gender age      maritalStatus  ...  \\\n0        Restaurant(<20)         1d  Female  21  Unmarried partner  ...   \n1           Coffee House         2h  Female  21  Unmarried partner  ...   \n2  Carry out & Take away         2h  Female  21  Unmarried partner  ...   \n3           Coffee House         2h  Female  21  Unmarried partner  ...   \n4           Coffee House         1d  Female  21  Unmarried partner  ...   \n\n   CoffeeHouse CarryAway RestaurantLessThan20 Restaurant20To50  \\\n0        never       NaN                  4~8              1~3   \n1        never       NaN                  4~8              1~3   \n2        never       NaN                  4~8              1~3   \n3        never       NaN                  4~8              1~3   \n4        never       NaN                  4~8              1~3   \n\n  toCoupon_GEQ5min toCoupon_GEQ15min toCoupon_GEQ25min direction_same  \\\n0                1                 0                 0              0   \n1                1                 0                 0              0   \n2                1                 1                 0              0   \n3                1                 1                 0              0   \n4                1                 1                 0              0   \n\n  direction_opp  Y  \n0             1  1  \n1             1  0  \n2             1  1  \n3             1  0  \n4             1  0  \n\n[5 rows x 26 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>destination</th>\n      <th>passanger</th>\n      <th>weather</th>\n      <th>temperature</th>\n      <th>time</th>\n      <th>coupon</th>\n      <th>expiration</th>\n      <th>gender</th>\n      <th>age</th>\n      <th>maritalStatus</th>\n      <th>...</th>\n      <th>CoffeeHouse</th>\n      <th>CarryAway</th>\n      <th>RestaurantLessThan20</th>\n      <th>Restaurant20To50</th>\n      <th>toCoupon_GEQ5min</th>\n      <th>toCoupon_GEQ15min</th>\n      <th>toCoupon_GEQ25min</th>\n      <th>direction_same</th>\n      <th>direction_opp</th>\n      <th>Y</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>No Urgent Place</td>\n      <td>Alone</td>\n      <td>Sunny</td>\n      <td>55</td>\n      <td>2PM</td>\n      <td>Restaurant(&lt;20)</td>\n      <td>1d</td>\n      <td>Female</td>\n      <td>21</td>\n      <td>Unmarried partner</td>\n      <td>...</td>\n      <td>never</td>\n      <td>NaN</td>\n      <td>4~8</td>\n      <td>1~3</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>No Urgent Place</td>\n      <td>Friend(s)</td>\n      <td>Sunny</td>\n      <td>80</td>\n      <td>10AM</td>\n      <td>Coffee House</td>\n      <td>2h</td>\n      <td>Female</td>\n      <td>21</td>\n      <td>Unmarried partner</td>\n      <td>...</td>\n      <td>never</td>\n      <td>NaN</td>\n      <td>4~8</td>\n      <td>1~3</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>No Urgent Place</td>\n      <td>Friend(s)</td>\n      <td>Sunny</td>\n      <td>80</td>\n      <td>10AM</td>\n      <td>Carry out &amp; Take away</td>\n      <td>2h</td>\n      <td>Female</td>\n      <td>21</td>\n      <td>Unmarried partner</td>\n      <td>...</td>\n      <td>never</td>\n      <td>NaN</td>\n      <td>4~8</td>\n      <td>1~3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>No Urgent Place</td>\n      <td>Friend(s)</td>\n      <td>Sunny</td>\n      <td>80</td>\n      <td>2PM</td>\n      <td>Coffee House</td>\n      <td>2h</td>\n      <td>Female</td>\n      <td>21</td>\n      <td>Unmarried partner</td>\n      <td>...</td>\n      <td>never</td>\n      <td>NaN</td>\n      <td>4~8</td>\n      <td>1~3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>No Urgent Place</td>\n      <td>Friend(s)</td>\n      <td>Sunny</td>\n      <td>80</td>\n      <td>2PM</td>\n      <td>Coffee House</td>\n      <td>1d</td>\n      <td>Female</td>\n      <td>21</td>\n      <td>Unmarried partner</td>\n      <td>...</td>\n      <td>never</td>\n      <td>NaN</td>\n      <td>4~8</td>\n      <td>1~3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 26 columns</p>\n</div>"
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_table('SouthGermanCredit.asc', sep=' ')\n",
+    "df = pd.read_csv('in-vehicle-coupon-recommendation.csv')\n",
     "df.head()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T02:25:27.148354900Z",
-     "start_time": "2023-08-15T02:25:26.923510100Z"
+     "end_time": "2023-08-15T09:40:51.466799700Z",
+     "start_time": "2023-08-15T09:40:50.528239800Z"
     }
    },
    "id": "417636c1bc3e9e14"
@@ -67,7 +67,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Build a Logistic Regression model"
+    "# Build a Softmax Regression model"
    ],
    "metadata": {
     "collapsed": false
@@ -76,18 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T02:25:27.180814300Z",
-     "start_time": "2023-08-15T02:25:26.953055100Z"
+     "end_time": "2023-08-15T09:40:51.467804900Z",
+     "start_time": "2023-08-15T09:40:50.653726300Z"
     }
    },
    "id": "de9a2d36f335079d"
@@ -104,23 +104,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "outputs": [],
    "source": [
-    "targetColName = 'kredit'"
+    "targetColName = 'Y'"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T02:25:27.182116900Z",
-     "start_time": "2023-08-15T02:25:26.969566400Z"
+     "end_time": "2023-08-15T09:40:51.521680800Z",
+     "start_time": "2023-08-15T09:40:50.671803800Z"
     }
    },
    "id": "6092f00b33e6edc6"
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
+   "outputs": [],
+   "source": [
+    "df = df.drop(['car'], axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T09:40:51.521680800Z",
+     "start_time": "2023-08-15T09:40:50.685993800Z"
+    }
+   },
+   "id": "e1cff8fcfd01a057"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "df = df.dropna()"
@@ -128,15 +144,31 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T02:25:27.182116900Z",
-     "start_time": "2023-08-15T02:25:26.983654900Z"
+     "end_time": "2023-08-15T09:40:51.521680800Z",
+     "start_time": "2023-08-15T09:40:50.715823800Z"
     }
    },
    "id": "543d5422de236f7c"
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
+   "outputs": [],
+   "source": [
+    "df = pd.get_dummies(df)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T09:40:51.521680800Z",
+     "start_time": "2023-08-15T09:40:50.778384700Z"
+    }
+   },
+   "id": "91289c08ecb0fc15"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "X = df.drop([targetColName], axis=1)"
@@ -144,15 +176,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T02:25:27.183369600Z",
-     "start_time": "2023-08-15T02:25:27.001156300Z"
+     "end_time": "2023-08-15T09:40:51.521680800Z",
+     "start_time": "2023-08-15T09:40:50.839494200Z"
     }
    },
    "id": "f375ef589143acb9"
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "y = df[targetColName] "
@@ -160,15 +192,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T02:25:27.183369600Z",
-     "start_time": "2023-08-15T02:25:27.017050200Z"
+     "end_time": "2023-08-15T09:40:51.521680800Z",
+     "start_time": "2023-08-15T09:40:50.859560200Z"
     }
    },
    "id": "3474461e3df815b8"
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123)"
@@ -176,20 +208,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T02:25:27.183369600Z",
-     "start_time": "2023-08-15T02:25:27.031573300Z"
+     "end_time": "2023-08-15T09:40:51.524725300Z",
+     "start_time": "2023-08-15T09:40:50.871399200Z"
     }
    },
    "id": "1629b74e07f5ce7d"
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "# Function to test each column\n",
     "def test_column(col):\n",
-    "    model = LogisticRegression()\n",
+    "    model = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5,), random_state=1, max_iter=1000000)\n",
     "    model.fit(X_train[col].to_frame(), y_train)\n",
     "    y_pred = model.predict(X_test[col].to_frame())\n",
     "    return accuracy_score(y_test, y_pred)"
@@ -197,19 +229,19 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T02:25:27.183369600Z",
-     "start_time": "2023-08-15T02:25:27.048258700Z"
+     "end_time": "2023-08-15T09:40:51.616558Z",
+     "start_time": "2023-08-15T09:40:50.903120200Z"
     }
    },
    "id": "25204888d98899a4"
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "def test_columns(cols):\n",
-    "    model = LogisticRegression()\n",
+    "    model = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5,), random_state=1, max_iter=1000000)\n",
     "    model.fit(X_train[cols], y_train)\n",
     "    y_pred = model.predict(X_test[cols])\n",
     "    return accuracy_score(y_test, y_pred)"
@@ -217,19 +249,19 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T02:25:27.183369600Z",
-     "start_time": "2023-08-15T02:25:27.065495100Z"
+     "end_time": "2023-08-15T09:40:51.617551700Z",
+     "start_time": "2023-08-15T09:40:50.918202600Z"
     }
    },
    "id": "31381cb25a1b2a71"
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "outputs": [],
    "source": [
     "def test_all():\n",
-    "    model = LogisticRegression()\n",
+    "    model = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5,), random_state=1, max_iter=1000000)\n",
     "    model.fit(X_train, y_train)\n",
     "    y_pred = model.predict(X_test)\n",
     "    return accuracy_score(y_test, y_pred)"
@@ -237,15 +269,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T02:25:27.183369600Z",
-     "start_time": "2023-08-15T02:25:27.081754800Z"
+     "end_time": "2023-08-15T09:40:51.617551700Z",
+     "start_time": "2023-08-15T09:40:50.935526200Z"
     }
    },
    "id": "ffa5c114daab3f28"
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "# Test each column\n",
@@ -255,15 +287,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T02:25:27.202980600Z",
-     "start_time": "2023-08-15T02:25:27.092430900Z"
+     "end_time": "2023-08-15T09:40:51.617551700Z",
+     "start_time": "2023-08-15T09:40:50.949715100Z"
     }
    },
    "id": "a7336fc9c91cc822"
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "# Test columns in pairs\n",
@@ -275,35 +307,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T02:25:27.202980600Z",
-     "start_time": "2023-08-15T02:25:27.108825900Z"
+     "end_time": "2023-08-15T09:40:51.617551700Z",
+     "start_time": "2023-08-15T09:40:50.963751500Z"
     }
    },
    "id": "8a8c07d6ad7ecab0"
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\taqua\\miniconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
      "data": {
-      "text/plain": "0.75"
+      "text/plain": "0.6862582781456954"
      },
-     "execution_count": 19,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,8 +333,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T02:25:27.288679500Z",
-     "start_time": "2023-08-15T02:25:27.126083600Z"
+     "end_time": "2023-08-15T09:40:54.847468Z",
+     "start_time": "2023-08-15T09:40:50.977164100Z"
     }
    },
    "id": "6963cd83fdb364bf"
