DL2 - Add comments

--- a/Báo Cáo Cuối Kỳ/Dữ liệu 2/DL2 - Decision Tree.ipynb
+++ b/Báo Cáo Cuối Kỳ/Dữ liệu 2/DL2 - Decision Tree.ipynb
@@ -108,7 +108,7 @@
    "execution_count": 6,
    "outputs": [],
    "source": [
-    "df = df.dropna()"
+    "df = df.dropna() # Bỏ các dòng chứa giá trị bị mất"
    ],
    "metadata": {
     "collapsed": false,
@@ -124,7 +124,7 @@
    "execution_count": 7,
    "outputs": [],
    "source": [
-    "X = df.drop(['kredit'], axis=1)"
+    "X = df.drop(['kredit'], axis=1) # Lấy X là feature"
    ],
    "metadata": {
     "collapsed": false,
@@ -140,7 +140,7 @@
    "execution_count": 8,
    "outputs": [],
    "source": [
-    "y = df['kredit'] "
+    "y = df['kredit'] # Lấy Y là target"
    ],
    "metadata": {
     "collapsed": false,
@@ -156,7 +156,7 @@
    "execution_count": 9,
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123) # Tách dữ liệu train và dữ liệu test"
    ],
    "metadata": {
     "collapsed": false,
@@ -214,10 +214,10 @@
    "outputs": [],
    "source": [
     "def test_all():\n",
-    "    model = DecisionTreeClassifier(max_depth=4, random_state=123)\n",
-    "    model.fit(X_train, y_train)\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    return accuracy_score(y_test, y_pred)"
+    "    model = DecisionTreeClassifier(max_depth=4, random_state=123) # Lấy model\n",
+    "    model.fit(X_train, y_train) # Train model với dữ liệu\n",
+    "    y_pred = model.predict(X_test) # Kiểm trả model với dự liệu test\n",
+    "    return accuracy_score(y_test, y_pred) # trả về tỉ lệ đúng của model"
    ],
    "metadata": {
     "collapsed": false,
